--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div class="header">
                 <img src="img/imageHeader.png"/>
             </div>
+            <div class="content">
+                <img src="img/content.png" alt=""/>
+                <img src="img/maquina.png" alt="" id="maquina"/>
+            </div>
         </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
