--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <img src="img/content.png" alt=""/>
                 <img src="img/maquina.png" alt="" id="maquina"/>
             </div>
+            <a href="#" class="bt"></a>
+            <div class="under">
+                <img src="img/under.png" alt=""/>
+            </div>
         </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
