--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/animate.css">
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -21,8 +22,8 @@
                 <img src="img/imageHeader.png"/>
             </div>
             <div class="content">
-                <img src="img/content.png" alt=""/>
-                <img src="img/maquina.png" alt="" id="maquina"/>
+                <img src="img/content.png" alt="" class="text"/>
+                <img src="img/maquina.png" alt="" id="maquina" class="hidden"/>
             </div>
             <a href="#" class="bt"></a>
             <div class="under">
