--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <title>iBeacon Colombo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="minimal-ui">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
