--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <img src="img/content.png" alt="" class="text"/>
                 <img src="img/maquina.png" alt="" id="maquina" class="hidden"/>
             </div>
-            <a href="#" class="bt"></a>
+            <a href="#" class="bt">
+                <img src="img/bt.png" alt="" class="bt01">
+                <img src="img/bt2.png" alt="" class="bt02">
+            </a>
             <div class="under">
                 <img src="img/under.png" alt=""/>
             </div>
